# bastet-project

./: .gitignore  README.md  pins.xlsx  tets_light_odom.py
kitty-project/: CMakeLists.txt  package.xml
kitty_description/: CMakeLists.txt  package.xml
kitty_description/config/: props.yaml
kitty_description/config/controllers/: four_wheel_steering_controller.yaml
kitty_description/launch/: kitty.launch
kitty_description/urdf/: base.urdf.xacro  config.urdf.xacro  params.urdf.xacro
kitty_software/: CMakeLists.txt  package.xml
kitty_software/config/amcl/: amcl.yaml
kitty_software/config/archive/: ukf_vo_test.yaml
kitty_software/config/hector_mapping/: hector_mapping.yaml
kitty_software/config/laser_filters/: bounding_box_filter.yaml
kitty_software/config/move_base/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
kitty_software/config/robot_localization/: ekf_local.yaml  ukf_vo.yaml
kitty_software/config/rviz/: test_odometry.rviz
kitty_software/config/slam_gmapping/: slam_gmapping.yaml
kitty_software/config/twist_mux/: twist_mux.yaml
kitty_software/launch/: 2d_map_saver.launch
kitty_software/launch/archive/: start_joy_teleop.launch
kitty_software/launch/debug/: ekf_debug.launch  mapping_debug.launch
kitty_software/launch/drivers/: 2d_map_saver.launch  X2.launch  amcl.launch  hector_mapping.launch  laser_filter.launch  (+9 more)
kitty_software/scripts/: 2d_map_saver.py  cmd_publisher.py  joy_ctrl.py  odom.py  odom_bicycle.py  odom_bicycle_ros.py  ping2compressed.py  ping2raw.py
kitty_software/src/: odom.cpp
(+459 files in other folders)
