<?xml version="1.0"?>
<package format="2">

    <name>kitty_description</name>
    <version>0.0.0</version>
    <description>The kitty_description package</description>
    <maintainer email="nlobazev@gmail.com">Lobazev Nikita</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
